--- a/SSZone-master/package.json
+++ b/SSZone-master/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
     "framer-motion": "^12.8.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
